--- a/lvl3/build.gradle
+++ b/lvl3/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -35,6 +37,18 @@ android {
 }
 
 dependencies {
+    implementation "com.github.Batterii:PagingRecycler:v1.1.1"
+    implementation "androidx.paging:paging-common-ktx:3.1.1"
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+    implementation "androidx.paging:paging-rxjava3:3.1.1"
+    implementation "androidx.room:room-paging:2.4.3"
+
+
+    implementation "androidx.room:room-ktx:2.4.3"
+    implementation "androidx.room:room-runtime:2.4.3"
+    implementation("androidx.room:room-rxjava3:2.4.3")
+    kapt "androidx.room:room-compiler:2.4.3"
+
     implementation 'com.github.bumptech.glide:glide:4.13.2'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
